# sqlsimple

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yaml  mkdocs.yaml  pyproject.toml
.github/: FUNDING.yaml
.github/workflows/: publish.yaml
documentations/: contributing.md  help.md  index.md  release.md
documentations/stylesheets/: extra.css
sqlsimple/: main.py
tests/: test_default.py
tests/queries/: tests.find_all.sql  tests.find_by_id.sql
