[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Bernardo Couto <bernardocouto.py@gmail.com>"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed"
]
description = "SQLSimple framework, easy to learn, fast to code, ready for production."
homepage = "https://github.com/bernardocouto/sqlsimple"
license = "MIT"
name = "sqlsimple"
readme = "README.md"
repository = "https://github.com/bernardocouto/sqlsimple"
version = "0"

[tool.poetry.dependencies]
dbutils = "^3.0.2"
psycopg2 = "^2.9.3"
pystache = "^0.6.0"
python = "^3.6.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.9"
